# eeg-flow

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  code-style.yaml  code-style.yml  pytest.yaml  pytest.yml  style.yml
eeg_flow/: __init__.py  analysis.py  bad_channels.py  conftest.py  io.py  loader.py
eeg_flow/audio/: __init__.py  sound.py
eeg_flow/commands/: oddball.py
eeg_flow/config/: __init__.py  config.py  triggers.ini  triggers.py
eeg_flow/config/tests/: test_config.py
eeg_flow/config/tests/data/: test_triggers.ini  test_triggers_invalid.ini
eeg_flow/oddball/: __init__.py  _utils.py  oddball.py
eeg_flow/oddball/tests/: test_oddball_files.py
eeg_flow/oddball/trialList/: trialList_1_100_vol-eval-active.txt  trialList_1_100_vol-eval-passive.txt  trialList_1_100_vol-eval.txt  trialList_2_600_game-eval.txt  trialList_3_360_oddball-active-a.txt  trialList_3_360_oddball-active-b.txt  trialList_3_360_oddball-passive-a.txt  trialList_3_360_oddball-passive-b.txt  trialList_4_1000_oddball-game-a.txt  trialList_4_1000_oddball-game-b.txt
eeg_flow/processing/: __init__.py  car.py  mastoid.py
eeg_flow/tasks/: __init__.py  annotate_bad_channels_and_segments.py  convert_xdf_to_fiff.py  create_behavioral_metadata.py  epochs_evoked.py  epochs_evoked_60b.py  epochs_evoked_70dd.py  epochs_evoked_70dd_0100.py  epochs_evoked_eog_31zzc.py  epochs_evoked_for_freqresponse.py  epochs_evokeds.py  ica_apply.py  ica_comp_select.py  ica_compare.py  ica_decomposition.py  ica_decomposition_currenttempupdate.py  icas_fit.py  plot_erp.py  prep_annotations.py  pseudocode.txt  response.py
eeg_flow/utils/: __init__.py  _checks.py  _cli.py  _config.py  _docs.py  _fixes.py  annotations.py  bids.py  concurrency.py  config.py  parallel.py
eeg_flow/utils/tests/: test_annotations.py  test_concurrency.py
eeg_flow/viz/: __init__.py  bridged.py
eeg_flow/viz/tests/: test_bridged.py
eeg_flow/viz/tests/data/: test-bridged-raw.fif
scripts/: analysis-2.py  analysis-auto.py  analysis.py  analysis_with_low_fq.py  trial.py
scripts/tasks/: 0_init_config.ipynb  10_ICAs-apply-and-interpolate.ipynb  11_epochs-evoked_active-freqresponse.ipynb  11_epochs-evoked_active-response.ipynb  12_ICAs-apply-cleanEOG.ipynb  12b_ICAs-apply-cleanEOG-correct.ipynb  12c_ICAs-apply-cleanEOG-correct-EEGnoICA2.ipynb  12d_ICAs-apply-cleanEOG.ipynb  1_convert_xdf_to_fiff.ipynb  1_convert_xdf_to_fiff_attempt_mp.ipynb  1_convert_xdf_to_fiff_multiprocessing-clean.ipynb  1_convert_xdf_to_fiff_multiprocessing.ipynb  1b_annotate_bad_channels_and_segments.ipynb  1b_create_behavioral_metadatal.ipynb  20z_ICAs-apply-cleanEOGEEG3.ipynb  2_annotate_bad_channels_and_segments-clean.ipynb  2_annotate_bad_channels_and_segments.ipynb  2_annotate_bad_segments.ipynb  2_annotate_bad_segments_and_auto_bad_channels.ipynb  2_bridges_and_autobads.ipynb  30z_ICAs-apply-cleanEOGEEGall.ipynb  3_ICA.ipynb  3_ICAs-fit-parallel-multipleRuns.ipynb  3_ICAs-fit-parallel.ipynb  3_ICAs-fit.ipynb  3_ICAs-fit_multiprocessing-clean.ipynb  3_annotate_bad_channels.ipynb  3_annotate_bad_channels_and_segments.ipynb  4_ICA.ipynb  4_ICAs-fit.ipynb  4_ICAs-select-apply.ipynb  4_ICAs-select-clean.ipynb  4_ICAs-select.ipynb  4b_ICAs-compare-selection.ipynb  5_ICAs-apply.ipynb  5_ICAs-compare-selection-clean.ipynb  5_ICAs-compare-selection.ipynb  5_ICAs-select.ipynb  6_ICAs-apply.ipynb  6_ICAs-apply_multiprocessing-clean.ipynb  (+24 more)
scripts/tasks/checks/: Check_and_rename_labels.ipynb  logs_labels_2023-10-19__16-00.txt
scripts/tasks/old/: _deprec_3_ICAs-fit-parallel_selfcontained.ipynb  _deprec_3_annotate_bad_channels.ipynb
