[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'eeg_flow'
version = '0.1.0'
description = 'EEG Flow project - FCBG - bavelierlab.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'neuroscience',
    'neuroimaging',
    'flow',
    'oddball',
    'audio',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
]
dependencies = [
    'numpy<1.24',
    'scipy',
    'mne>=1.1.0',
    'pyxdf',
    'pyprep>=0.4.0',
    'python-picard',
    'mne-icalabel>=0.2',
    'autoreject',
    'mne-qt-browser',
    'bsl==0.5.0',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
audio_sd = [
    'stimuli',
]
audio_psychopy = [
    'psychoy==2021.2.3',
]
style = [
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
]
all = [
    'eeg_flow[build]',
    'eeg_flow[audio_sd]',
    'eeg_flow[audio_psychopy]',
    'eeg_flow[style]',
    'eeg_flow[test]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/eeg-flow'
documentation = 'https://github.com/mscheltienne/eeg-flow'
source = 'https://github.com/mscheltienne/eeg-flow'
tracker = 'https://github.com/mscheltienne/eeg-flow/issues'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['template*']
exclude = ['template*tests']

[tool.setuptools.package-data]
"eeg_flow.config" = ["*.ini"]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | doc/
    | examples/
    | tutorials/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 38
extend_skip_glob = [
    'setup.py',
    'doc/*',
    'examples/*',
    'tutorials/*'
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^(?!build|dist|\.).*'
add_ignore = 'D100,D104,D107'
