[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'eeg_flow'
version = '0.1.0'
description = 'EEG Flow project - FCBG - bavelierlab.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'neuroscience',
    'neuroimaging',
    'flow',
    'oddball',
    'audio',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
]
dependencies = [
    'autoreject',
    'filelock',
    'mne>=1.3.0',
    'mne-icalabel>=0.4',
    'numpy<1.24',
    'openpyxl',
    'packaging',
    'pandas',
    'psutil',
    'pyprep>=0.4.0',
    'python-picard',
    'pyxdf',
    'scipy',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'black[jupyter]',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'eeg_flow[build]',
    'eeg_flow[style]',
    'eeg_flow[test]',
]
full = [
    'eeg_flow[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/eeg-flow'
documentation = 'https://github.com/mscheltienne/eeg-flow'
source = 'https://github.com/mscheltienne/eeg-flow'
tracker = 'https://github.com/mscheltienne/eeg-flow/issues'

[project.scripts]
eeg_flow-sys_info = 'eeg_flow.commands.sys_info:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['eeg_flow*']
exclude = ['eeg_flow*tests']

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 39
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^eeg_flow.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/eeg_flow/_version.py',
    '**/eeg_flow/commands/*',
    '**/eeg_flow/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
