[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'autoreject',
  'filelock',
  'mne-qt-browser>=0.5.1',
  'mne>=1.4.1',
  'numpy<1.24',
  'openpyxl',
  'packaging',
  'pandas',
  'psutil',
  'pyprep>=0.4.0',
  'python-picard',
  'pyxdf',
  'scipy',
  'tqdm',
]
description = 'EEG Flow project - FCBG - bavelierlab.'
keywords = [
  'audio',
  'flow',
  'neuroimaging',
  'neuroscience',
  'oddball',
  'python',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'eeg_flow'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'eeg_flow[build]',
  'eeg_flow[iclabel]',
  'eeg_flow[oddball]',
  'eeg_flow[style]',
  'eeg_flow[test]',
]
build = [
  'build',
  'twine',
]
full = [
  'eeg_flow[all]',
]
iclabel = [
  'mne-icalabel>=0.6',
]
oddball = [
  'byte_triggers',
  'psychopy',
  'psychtoolbox',
]
style = [
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
eeg_flow-oddball = 'eeg_flow.commands.oddball:run'
eeg_flow-sys_info = 'eeg_flow.commands.sys_info:run'

[project.urls]
documentation = 'https://github.com/mscheltienne/eeg-flow'
homepage = 'https://github.com/mscheltienne/eeg-flow'
source = 'https://github.com/mscheltienne/eeg-flow'
tracker = 'https://github.com/mscheltienne/eeg-flow/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/eeg_flow/_version.py',
  '**/eeg_flow/commands/*',
  '**/eeg_flow/utils/_fixes.py',
  '**/scripts/**',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'setup.py',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^eeg_flow.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'doc',
  'setup.py',
]
line-length = 88
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = []
select = ["A", "B", "E", "F", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
'*' = [
  "B904", # 'Within an except clause, raise exceptions with raise ... from ...'
  "UP007", # 'Use `X | Y` for type annotations', requires python 3.10
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"eeg_flow.oddball" = ["sounds/*.wav", "trialList/*.txt"]

[tool.setuptools.packages.find]
exclude = ['eeg_flow*tests']
include = ['eeg_flow*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
